--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,12 @@
   <meta charset="utf-8" />
   <title>Ionic App</title>
 
+  <!--WARNING-- FOR NORMAL DEVELOPMENT USE "/"  FOR GITHUB PAGES USE "."-->
+  <!--npm run ng build --prod-->
+
+  <!--to run compodoc for documentation-->
+  <!--npm install --save-dev @compodoc/compodoc-->
+  <!--npx compodoc -p tsconfig.doc.json--> 
   <base href="/" />
 
   <meta name="color-scheme" content="light dark" />
